--- a/index7.html
+++ b/index7.html
@@ -4,214 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home Net - متجر الخطوط</title>
+  <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-database.js"></script>
   <style>
-    /* إعدادات عامة */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Cairo', sans-serif;
-      background: #f9f9f9;
-      text-align: center;
-      padding-top: 40px;
-    }
-
-    /* الشريط العلوي */
-    .header {
-      background: #333;
-      color: white;
-      padding: 20px;
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    /* الحاوية */
-    .section {
-      margin: 20px auto;
-      padding: 20px;
-      width: 50%;
-      max-width: 1200px;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    .section h2 {
-      font-size: 24px;
-      margin-bottom: 20px;
-      color: #333;
-    }
-
-    /* الشبكة */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 20px;
-    }
-
-    /* المربعات */
-    .card {
-      background: black;
-      border-radius: 20px;
-      padding: 40px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      transition: transform 0.3s ease;
-    }
-
-    .card img {
-      width: 100px;
-      height: 100px;
-      margin-bottom: 10px;
-    }
-
-    .card h4 {
-      font-size: 18px;
-      margin-bottom: 8px;
-      color: #555;
-    }
-
-    .card p {
-      margin-bottom: 15px;
-      color: #777;
-    }
-
-    .card .price {
-      font-size: 16px;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-
-    .card button {
-      border: none;
-      padding: 10px 20px;
-      border-radius: 5px;
-      cursor: pointer;
-      font-weight: bold;
-      color: white;
-    }
-
-    .card:hover {
-      transform: scale(1.05);
-    }
-
-    /* ألوان الشركات */
-    .vodafone .card {
-      background: #fff;
-      border: 2px solid #ff0000;
-    }
-
-    .vodafone .card .price,
-    .vodafone .card button {
-      background: #ff0000;
-    }
-
-    .orange .card {
-      background: #fff;
-      border: 2px solid #ff6f00;
-    }
-
-    .orange .card .price,
-    .orange .card button {
-      background: #ff6f00;
-    }
-
-    .etisalat .card {
-      background: #fff;
-      border: 2px solid #4caf50;
-    }
-
-    .etisalat .card .price,
-    .etisalat .card button {
-      background: #4caf50;
-    }
-
-    .we .card {
-      background: #fff;
-      border: 2px solid #6a1b9a;
-    }
-
-    .we .card .price,
-    .we .card button {
-      background: #6a1b9a;
-    }
-
-    /* النافذة المنبثقة */
-    .popup {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      width: 80%;
-      max-width: 400px;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      border-radius: 8px;
-      z-index: 1000;
-      text-align: center;
-    }
-
-    .popup h3 {
-      font-size: 20px;
-      margin-bottom: 10px;
-      color: #333;
-    }
-
-    .popup p {
-      margin: 10px 0;
-      color: #555;
-    }
-
-    .popup button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .popup .pay-btn {
-      background: #4caf50;
-      color: white;
-    }
-
-    .popup .close-btn {
-      background: #f44336;
-      color: white;
-    }
-
-    .popup .pay-btn:hover {
-      background: #388e3c;
-    }
-
-    .popup .close-btn:hover {
-      background: #d32f2f;
-    }
-
-    /* الخلفية الداكنة */
-    .overlay {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      z-index: 999;
-    }
+    /* إعدادات التصميم (نفس الكود السابق) */
   </style>
 </head>
 <body>
-  <!-- الشريط العلوي -->
   <div class="header">Home Net</div>
 
-  <!-- أقسام الشركات -->
   <div class="section vodafone">
     <h2>Vodafone</h2>
     <div class="grid"></div>
@@ -232,19 +33,24 @@
     <div class="grid"></div>
   </div>
 
-  <!-- النافذة المنبثقة -->
-  <div class="overlay" id="overlay" onclick="hidePopup()"></div>
-  <div class="popup" id="popup">
-    <h3>فاتورة الشراء</h3>
-    <p id="line-number"></p>
-    <p id="line-price"></p>
-    <button class="pay-btn" onclick="window.location.href='index000.html'">دفع</button>
-    <button class="close-btn" onclick="hidePopup()">إغلاق</button>
-  </div>
-
   <script>
+    // تكوين Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyCtRfaJisqxYWZ-RnwpKp_oAoNR1DOAtD4",
+      authDomain: "ahmed-samy-703d8.firebaseapp.com",
+      databaseURL: "https://ahmed-samy-703d8-default-rtdb.firebaseio.com",
+      projectId: "ahmed-samy-703d8",
+      storageBucket: "ahmed-samy-703d8.appspot.com",
+      messagingSenderId: "750583553196",
+      appId: "1:750583553196:web:9682a66744a972ea569309",
+      measurementId: "G-PJWWR1CX6M"
+    };
+
+    // تهيئة Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+
     document.addEventListener('DOMContentLoaded', () => {
-      const products = JSON.parse(localStorage.getItem('products')) || [];
       const categories = {
         vodafone: document.querySelector('.section.vodafone .grid'),
         orange: document.querySelector('.section.orange .grid'),
@@ -252,30 +58,27 @@
         we: document.querySelector('.section.we .grid')
       };
 
-      products.forEach(product => {
-        const card = `
-          <div class="card">
-            <img src="${product.image}" alt="${product.category}">
-            <h4>رقم: ${product.number}</h4>
-            <p class="price">السعر: ${product.price}</p>
-            <button onclick="showPopup('${product.number}', '${product.price}')">شراء</button>
-          </div>
-        `;
-        categories[product.category].innerHTML += card;
+      // تحميل المنتجات من قاعدة البيانات
+      database.ref('products').on('value', (snapshot) => {
+        const products = snapshot.val();
+        Object.keys(categories).forEach(category => {
+          categories[category].innerHTML = ''; // مسح المنتجات القديمة
+        });
+
+        for (const id in products) {
+          const product = products[id];
+          const card = `
+            <div class="card">
+              <img src="${product.image}" alt="${product.category}">
+              <h4>رقم: ${product.number}</h4>
+              <p class="price">السعر: ${product.price}</p>
+              <button>شراء</button>
+            </div>
+          `;
+          categories[product.category].innerHTML += card;
+        }
       });
     });
-
-    function showPopup(number, price) {
-      document.getElementById('line-number').textContent = `الرقم: ${number}`;
-      document.getElementById('line-price').textContent = `السعر: ${price}`;
-      document.getElementById('popup').style.display = 'block';
-      document.getElementById('overlay').style.display = 'block';
-    }
-
-    function hidePopup() {
-      document.getElementById('popup').style.display = 'none';
-      document.getElementById('overlay').style.display = 'none';
-    }
   </script>
 </body>
-  </html>
+</html>
