--- a/admin.html
+++ b/admin.html
@@ -3,130 +3,111 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>لوحة التحكم - متجر الخطوط</title>
+  <title>لوحة التحكم</title>
+  <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-database.js"></script>
   <style>
     body {
-      font-family: 'Cairo', sans-serif;
-      background: #f9f9f9;
-      padding: 20px;
+      font-family: Arial, sans-serif;
       text-align: center;
+      margin: 20px;
     }
 
-    .container {
-      width: 50%;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    h2 {
-      margin-bottom: 20px;
-    }
-
-    input, select, button {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-    }
-
-    button {
-      background: #4caf50;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #388e3c;
-    }
-
-    .products-list {
+    form {
+      display: inline-block;
+      text-align: left;
       margin-top: 20px;
     }
 
-    .product-item {
-      display: flex;
-      justify-content: space-between;
-      background: #f1f1f1;
+    label {
+      display: block;
+      margin-bottom: 10px;
+    }
+
+    input, select {
+      width: 100%;
       padding: 10px;
-      margin: 5px 0;
-      border-radius: 5px;
+      margin-bottom: 20px;
     }
 
-    .product-item button {
-      background: #f44336;
+    button {
+      padding: 10px 20px;
+      background-color: #4CAF50;
       color: white;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
     }
 
-    .product-item button:hover {
-      background: #d32f2f;
+    button:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>إضافة منتج جديد</h2>
-    <input id="productNumber" type="text" placeholder="رقم المنتج" required>
-    <input id="productPrice" type="text" placeholder="السعر" required>
-    <input id="productImage" type="text" placeholder="رابط الصورة" required>
-    <select id="productCategory">
+  <h1>لوحة التحكم</h1>
+  <form id="add-product-form">
+    <label for="category">اختر الشركة:</label>
+    <select id="category" required>
       <option value="vodafone">Vodafone</option>
       <option value="orange">Orange</option>
       <option value="etisalat">Etisalat</option>
       <option value="we">WE</option>
     </select>
-    <button onclick="addProduct()">إضافة المنتج</button>
 
-    <h2>قائمة المنتجات</h2>
-    <div class="products-list" id="productsList"></div>
-  </div>
+    <label for="number">رقم الخط:</label>
+    <input type="text" id="number" placeholder="أدخل رقم الخط" required />
+
+    <label for="price">السعر:</label>
+    <input type="number" id="price" placeholder="أدخل السعر" required />
+
+    <label for="image">رابط الصورة:</label>
+    <input type="text" id="image" placeholder="أدخل رابط الصورة" required />
+
+    <button type="submit">إضافة المنتج</button>
+  </form>
 
   <script>
-    let products = JSON.parse(localStorage.getItem('products')) || [];
+    // تكوين Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyCtRfaJisqxYWZ-RnwpKp_oAoNR1DOAtD4",
+      authDomain: "ahmed-samy-703d8.firebaseapp.com",
+      databaseURL: "https://ahmed-samy-703d8-default-rtdb.firebaseio.com",
+      projectId: "ahmed-samy-703d8",
+      storageBucket: "ahmed-samy-703d8.appspot.com",
+      messagingSenderId: "750583553196",
+      appId: "1:750583553196:web:9682a66744a972ea569309",
+      measurementId: "G-PJWWR1CX6M"
+    };
 
-    function addProduct() {
-      const number = document.getElementById('productNumber').value;
-      const price = document.getElementById('productPrice').value;
-      const image = document.getElementById('productImage').value;
-      const category = document.getElementById('productCategory').value;
+    // تهيئة Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
 
-      if (number && price && image) {
-        products.push({ number, price, image, category });
-        localStorage.setItem('products', JSON.stringify(products));
-        displayProducts();
-        document.getElementById('productNumber').value = '';
-        document.getElementById('productPrice').value = '';
-        document.getElementById('productImage').value = '';
-      } else {
-        alert('يرجى إدخال جميع البيانات');
-      }
-    }
+    // التعامل مع الفورم
+    document.getElementById('add-product-form').addEventListener('submit', (e) => {
+      e.preventDefault();
 
-    function deleteProduct(index) {
-      products.splice(index, 1);
-      localStorage.setItem('products', JSON.stringify(products));
-      displayProducts();
-    }
+      // جلب البيانات من النموذج
+      const category = document.getElementById('category').value;
+      const number = document.getElementById('number').value;
+      const price = document.getElementById('price').value;
+      const image = document.getElementById('image').value;
 
-    function displayProducts() {
-      const list = document.getElementById('productsList');
-      list.innerHTML = '';
-      products.forEach((product, index) => {
-        list.innerHTML += `
-          <div class="product-item">
-            <span>${product.number} - ${product.price} - ${product.category}</span>
-            <img src="${product.image}" alt="Product Image" style="width: 50px; height: 50px;">
-            <button onclick="deleteProduct(${index})">حذف</button>
-          </div>
-        `;
+      // إضافة المنتج إلى قاعدة البيانات
+      const productRef = database.ref('products').push();
+      productRef.set({
+        category,
+        number,
+        price,
+        image
+      }).then(() => {
+        alert('تمت إضافة المنتج بنجاح');
+        document.getElementById('add-product-form').reset();
+      }).catch(error => {
+        console.error('حدث خطأ:', error);
       });
-    }
-
-    displayProducts();
+    });
   </script>
 </body>
 </html>
